--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.2",
     "glightbox": "^3.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -17,10 +18,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://api.tazatropics.com",
   "eslintConfig": {
     "extends": [
       "react-app",
